result/subtask06-if/testcase02.out
> Create symbol table (scope level 0)
func: main
> Insert `main` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 0) to scope level 1
INT_LIT 0
> Insert `a` (addr: 1) to scope level 1
INT_LIT 0
> Insert `b` (addr: 2) to scope level 1
INT_LIT 10
> Insert `c` (addr: 3) to scope level 1
IDENT (name=a, address=1)
INT_LIT 0
EQL
IDENT (name=b, address=2)
INT_LIT 0
EQL
LAN
IF
> Create symbol table (scope level 2)
IDENT (name=a, address=1)
IDENT (name=b, address=2)
IDENT (name=c, address=3)
IDENT (name=endl, address=-1)
cout int int int string

> Dump symbol table (scope level: 2)
Index     Name                Type      Addr      Lineno    Func_sig  
IDENT (name=c, address=3)
IDENT (name=b, address=2)
SUB
INT_LIT 0
GEQ
IF
> Create symbol table (scope level 2)
STR_LIT "OK!"
IDENT (name=endl, address=-1)
cout string string

> Dump symbol table (scope level: 2)
Index     Name                Type      Addr      Lineno    Func_sig  
IDENT (name=a, address=1)
INT_LIT 0
EQL
IDENT (name=b, address=2)
INT_LIT 0
NEQ
LAN
IDENT (name=c, address=3)
INT_LIT 10
EQL
LOR
IF
> Create symbol table (scope level 2)
STR_LIT "test1"
IDENT (name=endl, address=-1)
cout string string

> Dump symbol table (scope level: 2)
Index     Name                Type      Addr      Lineno    Func_sig  
ELSE
> Create symbol table (scope level 2)
IDENT (name=c, address=3)
INT_LIT 10
EQL
IDENT (name=a, address=1)
INT_LIT 0
NEQ
LOR
IDENT (name=a, address=1)
INT_LIT 0
EQL
IDENT (name=b, address=2)
INT_LIT 0
EQL
LAN
IDENT (name=c, address=3)
INT_LIT 0
EQL
LAN
IDENT (name=c, address=3)
INT_LIT 10
EQL
IDENT (name=a, address=1)
INT_LIT 0
EQL
LOR
LAN
LAN
IF
> Create symbol table (scope level 3)
STR_LIT "test2"
IDENT (name=endl, address=-1)
cout string string

> Dump symbol table (scope level: 3)
Index     Name                Type      Addr      Lineno    Func_sig  
ELSE
> Create symbol table (scope level 3)
STR_LIT "test3"
IDENT (name=endl, address=-1)
cout string string
/home/share/hw2/input/subtask06-if/testcase02.cpp:20:13: error:  syntax error
    20 |            if true) {
       |            ^
Total lines: 20
